--- a/globalParameters.properties
+++ b/globalParameters.properties
@@ -30,10 +30,10 @@ AppiumServer=http://127.0.0.1:4723/wd/hub
 
 ##########################################################################################
 ############################ CONFIGURACOES BROWSERSTACK ##################################
-AccessKeyBrowserStack= Cv73jez4HCa7vV2YwWRf
-UsernameBrowserStack= diegopereira_PYDbNj
+AccessKeyBrowserStack= bt1LNNzEwHCsRrCDguSx
+UsernameBrowserStack= diegofarias_NVe4ju
 BuildNumberBrowserStack= new
-AppAndroidUploadBrowserStack=f76f877130ef4dfbf4ab0d3a37845bd1adea54bf
+AppAndroidUploadBrowserStack=8e6baca09ded21fe5310a0e443807605b0f30cde
 AppIOSUploadBrowserStack=c522b7bc0349f96c49e8335a648e3802dfdd2aba
 
 ##########################################################################################
@@ -44,7 +44,7 @@ IOSProjectBrowserStack= UITests iOS
 
 ##########################################################################################
 ############################ CONFIGURACOES BROWSERSTACK Android ##########################
-AndroidDeviceBrowserStack= Samsung Galaxy S10 Plus
+AndroidDeviceBrowserStack= Google Pixel 3
 AndroidOSVersionBrowserStack= 9.0
 AndroidProjectBrowserStack= UITests Android
 
